# OpenAlice-rust

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md  package.json  pnpm-lock.yaml
crates/alice-trading-core/: Cargo.toml
crates/alice-trading-core/spikes/alpaca/: REPORT.md
crates/alice-trading-core/spikes/ibkr/: REPORT.md
crates/alice-trading-core/src/: canonical.rs  decimal.rs  git.rs  hash_v2.rs  lib.rs  operation_wire.rs  persisted_commit.rs  types.rs  wire_schema.rs
crates/alice-trading-core/src/brokers/: error.rs  mock.rs  mod.rs  traits.rs  types.rs
crates/alice-trading-core/src/guards/: cooldown.rs  max_position_size.rs  mod.rs  pipeline.rs  registry.rs  symbol_whitelist.rs  traits.rs  util.rs
crates/alice-trading-core/src/journal/: mod.rs  reconcile.rs  store.rs  types.rs
crates/alice-trading-core/src/napi_binding/: commands.rs  error_map.rs  events.rs  mod.rs  panic.rs  trading_core.rs  types.rs
crates/alice-trading-core/src/uta/: actor.rs  command.rs  health.rs  mod.rs  persist.rs  reconciler.rs  state.rs
crates/alice-trading-core/tests/: broker_client_order_id.rs  broker_error_serialize.rs  canonical_decimal_parity.rs  git_lifecycle.rs  git_roundtrip.rs  guard_pipeline_per_op_prefetch.rs  guards_unit.rs  hash_v2_golden.rs  journal_crash_recovery.rs  journal_disk_full.rs  journal_lifecycle.rs  journal_margin_ops.rs  mock_broker_parity.rs  uta_health_transitions.rs  uta_lifecycle_mock.rs  uta_persist.rs  uta_reconciler.rs  uta_simple_commands.rs  v2_fixtures_verify.rs  wire_decimal_unset.rs
docs/: RUST_MIGRATION_PLAN.v3.md  binance-pivot-plan.md  (+3 more)
(+1419 files in other folders)
