[package]
name = "alice-trading-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# napi-binding is the default for cdylib builds; disable for plain cargo test
default = []
napi-binding = ["napi", "napi-derive"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi9", "tokio_rt", "async"], optional = true }
napi-derive = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bigdecimal = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
regex = "1"
thiserror = "1"
async-trait = "0.1"
bitflags = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2"
